# InventorySystem

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md  main.cpp
cli/: main.cpp
core/: Inventory.hpp
executables/: main_2025-11-09_14-50-43
gui/: MainWindow.cpp  MainWindow.h  gui_main.cpp
include/: Inventory.hpp
scripts/: 1_install_dependencies.sh  2_configure.sh  3_build.sh  last_run_cli.sh  last_run_gui.sh
src/: Inventory.cpp  main.cpp
